@@ -200,7 +200,7 @@ public class ColumnIndex
             indexSamplesSerializedSize += idxSerializer.serializedSize(cIndexInfo);
             if (indexSamplesSerializedSize + columnIndexCount * TypeSizes.sizeof(0) > DatabaseDescriptor.getColumnIndexCacheSize())
             {
-                buffer = useBuffer();
+                buffer = reuseOrAllocateBuffer();
                 for (IndexInfo indexSample : indexSamples)
                 {
                     idxSerializer.serialize(indexSample, buffer);
@@ -220,12 +220,14 @@ public class ColumnIndex
         firstClustering = null;
     }
 
-    private DataOutputBuffer useBuffer()
+    private DataOutputBuffer reuseOrAllocateBuffer()
     {
-        if (reusableBuffer != null) 
-        {
-            buffer = reusableBuffer;
+        // Check whether a reusable DataOutputBuffer already exists for this
+        // ColumnIndex instance and return it.
+        if (reusableBuffer != null) {
+            DataOutputBuffer buffer = reusableBuffer;
             buffer.clear();
+            return buffer;
         }
         // don't use the standard RECYCLER as that only recycles up to 1MB and requires proper cleanup
         return new DataOutputBuffer(DatabaseDescriptor.getColumnIndexCacheSize() * 2);
