@@ -1,4 +1,5 @@
 3.10
+ * ColumnIndex does not reuse buffer (CASSANDRA-12502)
  * cdc column addition still breaks schema migration tasks (CASSANDRA-12697)
  * Upgrade metrics-reporter dependencies (CASSANDRA-12089)
  * Tune compaction thread count via nodetool (CASSANDRA-12248)
